--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,14 +8,14 @@ import Maskottchen from "../images/Maskottchen.webp"
 import Laufen from "../images/Laufen.webp"
 import Werfen from "../images/Werfen.webp"
 import Springen from "../images/Springen.webp"
-import Hürden from "../images/Hürden.jpg"
+import Huerden from "../images/Huerden.jpg"
 ---
 
 <Layout title="LAT-Petershagen">
     <header>
         <div>
             <Image
-                src={Hürden}
+                src={Huerden}
                 width={1900}
                 height={600}
                 quality={80}
