--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ import Huerden from "../images/Huerden.jpg"
                 alt=""
               />	
         </div>
-        <div class="flex items-center justify-center text-4xl h-24 bg-orange-500 text-white">
-            <h1 class="text-4xl">Leichtathletikteam - Petershagen e.V.</h1>
+        <div class="flex items-center justify-center text-4xl h-24 bg-orange-500 text-white font-bold">
+            <h1 class="text-4xl">Leichtathletikteam - Petershagen e.V. -------</h1>
         </div>
     </header>
     <div class="flex justify-center pt-28">
