--- a/src/components/NavigationLink.astro
+++ b/src/components/NavigationLink.astro
@@ -7,8 +7,8 @@ const { title, url, link } = Astro.props;
 
 <NavigationMain
   url="/"
-  title="startseite"
-  link="Startseite"
+  title="home"
+  link="Home"
 />
 
 <NavigationMain
@@ -24,15 +24,9 @@ const { title, url, link } = Astro.props;
 />
 
 <NavigationMain
-  url="/trainingszeiten"
-  title="trainingszeiten"
-  link="Trainingszeiten"
-/>
-
-<NavigationMain
-  url="/trainingsgruppen"
-  title="trainingsgruppen"
-  link="Trainingsgruppen"
+  url="/training"
+  title="training"
+  link="Training"
 />
 
 <NavigationMain
