--- a/src/components/NavigationMain.astro
+++ b/src/components/NavigationMain.astro
@@ -2,6 +2,6 @@
 const { title, url, link } = Astro.props;
 ---
 
-<a href={url} title={title} class="ease-in-out flex flex-col items-center justify-center duration-300 hover:bg-orange-500 hover:text-white h-16 px-2">
+<a href={url} title={title} class="ease-in-out flex flex-col items-center justify-center duration-300 hover:bg-orange-500 text-white md:text-black h-12 md:h-16 px-2">
   {link}
 </a>
