--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Huerden from "../images/Huerden.jpg"
               />	
         </div>
         <div class="flex items-center justify-center h-24 bg-orange-500 text-white">
-            <h1 class="text-2xl md:text-4xl md:font-medium">Leichtathletikteam - Petershagen e.V.</h1>
+            <h1 class="text-xl md:text-4xl md:font-medium">Leichtathletikteam - Petershagen e.V.</h1>
         </div>
     </header>
     <div class="flex justify-center pt-14 md:pt-28 mx-32">
