--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Huerden from "../images/Huerden.jpg"
               />	
         </div>
         <div class="flex items-center justify-center h-24 bg-orange-500 text-white">
-            <h1 class="text-xl md:text-4xl md:font-medium">Leichtathletikteam - Petershagen e.V.</h1>
+            <h1 class="text-lg md:text-4xl md:font-medium">Leichtathletikteam - Petershagen e.V.</h1>
         </div>
     </header>
     <div class="flex justify-center pt-14 md:pt-28 mx-16">
@@ -39,7 +39,7 @@ import Huerden from "../images/Huerden.jpg"
               />
         </div>
     </div>
-    <div class="text-center py-8">
+    <div class="text-center py-12">
         <p>
             Unser Verein wurde im Sommer 2019 gegründet. <br>
             Stöbern Sie auf unserer Seite und werden Sie neugierig, uns persönlich kennen zu lernen. <br>
@@ -48,7 +48,7 @@ import Huerden from "../images/Huerden.jpg"
             Hürden sind für uns keine Hindernisse, sondern Herausforderungen auf dem Weg zum Ziel. <br>
         </p>
     </div>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-8 justify-center mx-2 md:mx-12 my-14 md:my-28">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-14 md:gap-8 justify-center mx-2 md:mx-12 mt-12 mb-20 md:my-28">
         <Card>
             <span slot="title">Laufen</span>
             <div class="flex justify-center flex-col pt-4">
